# ResMonix

./: .editorconfig  .gitignore  AGENT.md  CONTRIBUTING.md  LICENSE  README.md  build.bat  index.html  package-lock.json  package.json  vite.config.ts
.agents/: AGENTS.md
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  memory.rs
src-tauri/src/analyzer/: classifier.rs  mod.rs  suggestions.rs
src-tauri/src/scanner/: mod.rs  tree.rs  walker.rs
src-tauri/src/utils/: drives.rs
src/components/Dashboard/: Dashboard.tsx
src/components/DetailPanel/: FileDetail.tsx
src/components/DiskOverview/: DriveSelector.tsx
src/components/Layout/: DiskToolbar.tsx  Sidebar.tsx  Toolbar.tsx
src/components/Memory/: GlobalMemoryChart.tsx  MemoryTreemap.tsx  MemoryView.tsx  ProcessDetail.tsx  ProcessMemoryChart.tsx  ProcessSparkline.tsx  ProcessTree.tsx
src/components/Suggestions/: SuggestionPanel.tsx
src/components/TreeView/: VirtualTree.tsx
src/components/Treemap/: DiskTreemap.tsx
src/components/ui/: tooltip.tsx
src/i18n/: config.ts
src/i18n/locales/: en.json  vi.json
src/lib/: format.ts
src/store/: useDiskStore.ts  useMemoryStore.ts
src/types/: index.ts
