[package]
name = "resmonix"
version = "0.1.0"
description = "ResMonix - System Resource Management Tool"
authors = ["vuong"]
edition = "2021"

[lib]
name = "resmonix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
rayon = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
parking_lot = "0.12"
bytesize = { version = "1", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
jwalk = "0.8.1"
crossbeam-channel = "0.5.15"
reqwest = { version = "0.12", features = ["blocking"] }

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_RestartManager",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_Security",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
